# COMPASS-GUI

./: README.md
Test2/: mainwindow.py  pyproject.toml
Test2/mcp/: checkbox_model.py  controller.py  image_processors.py  image_provider.py
Test2/qml/: MainWindow.qml
Test2/qml/layouts/: BottomLayout.qml  TopLayout.qml
Test2/qml/widgets/: ImageFilterWidget.qml  ImageProcessor.qml
